<resources>
  <string name="app_name">Weather</string>

  <string name="tab_today_weather">Today</string>
  <string name="tab_three_days_weather">3 - 5 days</string>

  <string name="all">All</string>
  <string name="clouds">Clouds</string>
  <string name="beg">Beg</string>
  <string name="speed">Speed</string>
  <string name="wind">Wind</string>
  <string name="temp_min">Temp min</string>
  <string name="humidity">Humidity</string>
  <string name="temp">Temp</string>
  <string name="pressure">Pressure</string>
  <string name="main">Main</string>
  <string name="description">Description</string>
  <string name="weather">Weather</string>
  <string name="temp_max">Temp max</string>
  <string name="forestTest">test message</string>
  <string name="check_internet">Error. Please, check internet.</string>
  <string name="my_city">MY CITY</string>
  <string name="add_city">Add city</string>
  <string name="current_weather">current weather</string>
  <string name="five_days_forecast">5 day forecast </string>
  <string name="sixteen_days_forecast">16 day forecast</string>
  <string name="read_more"> Read more...</string>
  <string name="progress_message">Please wait</string>

</resources>
