<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/temp"
                    style="@style/Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="18" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/TextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sunrise" />

                <TextView
                    android:id="@+id/sunrise"
                    style="@style/SimpleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="45dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sunset" />

                    <TextView
                        android:id="@+id/sunset"
                        style="@style/SimpleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New Text" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_min" />

                <TextView
                    android:id="@+id/tempMin"
                    style="@style/SimpleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="45dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp_max" />

                    <TextView
                        android:id="@+id/tempMax"
                        style="@style/SimpleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New Text" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main"
                    style="@style/TextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main" />

                <TextView
                    style="@style/SimpleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/description"
                    style="@style/SimpleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure" />

                <TextView
                    android:id="@+id/pressure"
                    style="@style/SimpleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity" />

                <TextView
                    android:id="@+id/humidity"
                    style="@style/SimpleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed" />

                <TextView
                    android:id="@+id/speed"
                    style="@style/SimpleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beg" />

                <TextView
                    android:id="@+id/deg"
                    style="@style/SimpleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    style="@style/Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clouds" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all" />

                <TextView
                    android:id="@+id/allClouds"
                    style="@style/SimpleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>